@@ -1,3 +1,9 @@
+*eclipse-sdk-bin-4.3.2 (26 Mar 2014)
+
+  26 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +eclipse-sdk-bin-4.3.2.ebuild,
+  -eclipse-sdk-bin-4.3.1-r1.ebuild, -eclipse-sdk-bin-4.3.1.ebuild:
+  [dev-util/eclipse-bin] Version bump. Cleanup old.
+
 *eclipse-sdk-bin-4.3.1-r1 (06 Mar 2014)
 
   06 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +eclipse-sdk-bin-4.3.1-r1.ebuild,
